Bug fixes and upgrades

--- a/SOURCE_FILES/Makefile
+++ b/SOURCE_FILES/Makefile
@@ -13,3 +13,7 @@ update:
 	mkdir ../SIMULATION_OUTPUT
 	cd build && cmake .. && cmake --build . && clear && ./Simulation
 
+cleanup:
+	rm -rf build
+	rm ../SIMULATION_OUTPUT/*
+
