--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,7 +76,8 @@
         "__bit_reference": "cpp",
         "__hash_table": "cpp",
         "__tree": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "__config": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
