--- a/SOURCE_FILES/Makefile
+++ b/SOURCE_FILES/Makefile
@@ -1,19 +1,22 @@
 compile:
-	rm -rf build
-	mkdir build
+	rm -rf ../BUILD
+	mkdir ../BUILD
 	rm -rf ../SIMULATION_OUTPUT
 	mkdir ../SIMULATION_OUTPUT
-	cd build && cmake .. && cmake --build .
+	cmake -B ../BUILD
+	cmake --build ../BUILD
 
 total:
-	make compile && cd build && clear && ./Simulation
+	make compile && cd ../BUILD && clear && ./Simulation
 
 update:
 	rm -rf ../SIMULATION_OUTPUT
 	mkdir ../SIMULATION_OUTPUT
-	cd build && cmake .. && cmake --build . && clear && ./Simulation
+	cmake -B ../BUILD
+	cmake --build ../BUILD && clear && cd ../BUILD && ./Simulation
 
 cleanup:
-	rm -rf build
+	rm -rf ../BUILD
 	rm ../SIMULATION_OUTPUT/*
+	rm -i ../Visualization_matlab/*.asv
 
