--- a/SOURCE_FILES/CMakeLists.txt
+++ b/SOURCE_FILES/CMakeLists.txt
@@ -1,9 +1,17 @@
-# IF NO CXX COMPILER IS AVAILABLE, TYPE export CXX=/usr/bin/g++
-
-## IN ORDER TO EXECUTE FROM THE TERMINAL (UBUNTU), ALL YOU HAVE TO DO IS ACCESS THE BUILD FOLDER:
-# /mnt/c/Users/Vicentin/source/repos/CMAKE_LIOUVILLE/build
-
 cmake_minimum_required(VERSION 3.22)
+
+# set(CMAKE_SYSTEM_NAME Windows)
+set(CMAKE_SYSTEM_NAME Linux)
+
+# if(CMAKE_SYSTEM MATCHES Windows)
+#    message(STATUS "Target system is Windows")
+#    set(CMAKE_CXX_COMPILER )
+# endif()
+if(CMAKE_SYSTEM MATCHES Linux)
+   set(CMAKE_CXX_COMPILER "/usr/bin/c++")
+   set(CMAKE_C_COMPILER "/usr/bin/cc")
+   set(CMAKE_CUDA_COMPILER "/usr/bin/nvcc")
+endif()
 
 # IMPORTANT: HERE WE DEFINE THE VARIABLES TO BE USED THROUGHOUT THE CMAKE FILE
 set(PROJCT_NAME     LIOUVILLE_EQ_SOLVER)
@@ -40,6 +48,7 @@ target_include_directories(${LIB_NAME} PUBLIC
 
 
 add_executable(${EXECUTABLE_NAME} 00_MAIN.cu)
+# add_executable(${EXECUTABLE_NAME} $<WIN32_EXECUTABLE> 00_MAIN.cu)
 
 target_compile_options(${LIB_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -Xcompiler -fopenmp -lgomp>)
 target_link_libraries(${EXECUTABLE_NAME} PUBLIC ${LIB_NAME} OpenMP::OpenMP_CXX)
