--- a/SOURCE_FILES/CMakeLists.txt
+++ b/SOURCE_FILES/CMakeLists.txt
@@ -1,18 +1,5 @@
 cmake_minimum_required(VERSION 3.22)
 
-# set(CMAKE_SYSTEM_NAME Windows)
-set(CMAKE_SYSTEM_NAME Linux)
-
-# if(CMAKE_SYSTEM MATCHES Windows)
-#    message(STATUS "Target system is Windows")
-#    set(CMAKE_CXX_COMPILER )
-# endif()
-if(CMAKE_SYSTEM MATCHES Linux)
-   set(CMAKE_CXX_COMPILER "/usr/bin/c++")
-   set(CMAKE_C_COMPILER "/usr/bin/cc")
-   set(CMAKE_CUDA_COMPILER "/usr/bin/nvcc")
-endif()
-
 # IMPORTANT: HERE WE DEFINE THE VARIABLES TO BE USED THROUGHOUT THE CMAKE FILE
 set(PROJCT_NAME     LIOUVILLE_EQ_SOLVER)
 set(EXECUTABLE_NAME Simulation)
@@ -31,16 +18,7 @@ option(COMPILE_EXECUTABLE "Include executable compiling" ON)
 
 add_subdirectory(Configured)
 
-add_library(${LIB_NAME} STATIC 
-FULL_SIMULATION.cu
-Adapt_Mesh.cuh
-Case_definition.cuh
-Classes.cuh
-Dynamics.cuh
-Impulse_Transformations.cuh
-Mat_Ops.cuh
-Parameter_distributions.cuh
-Simulation_parameters.cuh)
+add_library(${LIB_NAME} STATIC FULL_SIMULATION.cu)
 
 target_include_directories(${LIB_NAME} PUBLIC
     "./"
@@ -48,7 +26,6 @@ target_include_directories(${LIB_NAME} PUBLIC
 
 
 add_executable(${EXECUTABLE_NAME} 00_MAIN.cu)
-# add_executable(${EXECUTABLE_NAME} $<WIN32_EXECUTABLE> 00_MAIN.cu)
 
 target_compile_options(${LIB_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: -Xcompiler -fopenmp -lgomp>)
 target_link_libraries(${EXECUTABLE_NAME} PUBLIC ${LIB_NAME} OpenMP::OpenMP_CXX)
