--- a/SOURCE_FILES/CMakeLists.txt
+++ b/SOURCE_FILES/CMakeLists.txt
@@ -11,6 +11,8 @@ set(CMAKE_CXX_STANDARD          17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS        ON)
 
+set(CMAKE_CUDA_HOST_COMPILER nvcc)
+
 find_package(OpenMP)
 
 option(CMAKE_BUILD_TYPE    RELEASE)
