--- a/SOURCE_FILES/Makefile
+++ b/SOURCE_FILES/Makefile
@@ -1,12 +1,4 @@
-win32_compile:
-	rmdir ..\BUILD_FILES
-	mkdir ..\BUILD_FILES
-	rmdir ..\SIMULATION_OUTPUT
-	mkdir ..\SIMULATION_OUTPUT
-	cmake -G "Visual Studio 17 2022" -A Win64 -S . -B ..\BUILD_FILES
-	cmake --build ..\BUILD_FILES
-
-Linx_compile:
+compile:
 	rm -rf ../BUILD_FILES
 	mkdir ../BUILD_FILES
 	rm -rf ../SIMULATION_OUTPUT
@@ -14,11 +6,8 @@ Linx_compile:
 	cmake -S . -B ../BUILD_FILES
 	cmake --build ../BUILD_FILES
 
-win32_total:
-	make win32_compile && cd ..\BUILD_FILES && clear && ./Simulation
-
-Linx_total:
-	make Linx_compile && cd ../BUILD_FILES && clear && ./Simulation
+Total:
+	make compile && cd ../BUILD_FILES && clear && ./Simulation
 
 update:
 	cmake --build ../BUILD_FILES && clear && cd ../BUILD_FILES && ./Simulation
@@ -27,4 +16,3 @@ cleanup:
 	rm -rf ../BUILD_FILES
 	rm -rf ../SIMULATION_OUTPUT/*
 	rm ../Visualization_matlab/*.asv
-
