--- a/SOURCE_FILES/CMakeLists.txt
+++ b/SOURCE_FILES/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
 
-set(CMAKE_HOST_SYSTEM Linux)
+set(CMAKE_HOST_SYSTEM Windows)
 
 # IMPORTANT: HERE WE DEFINE THE VARIABLES TO BE USED THROUGHOUT THE CMAKE FILE
 set(PROJCT_NAME     LIOUVILLE_EQ_SOLVER)
