--- a/SOURCE_FILES/CMakeLists.txt
+++ b/SOURCE_FILES/CMakeLists.txt
@@ -7,12 +7,12 @@ set(PROJCT_NAME     LIOUVILLE_EQ_SOLVER)
 set(EXECUTABLE_NAME Simulation)
 set(LIB_NAME        Solver_Lib)
 
-project(${PROJCT_NAME} VERSION 3.0.3 LANGUAGES CXX CUDA)
+project(${PROJCT_NAME} VERSION 3.1 LANGUAGES CXX CUDA)
 
 set(CMAKE_CXX_STANDARD          17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS        ON)
-set(CMAKE_CUDA_ARCHITECTURES    75 80)
+set(CMAKE_CUDA_ARCHITECTURES    60 75 80)
 
 find_package(OpenMP)
 
