Small bugfixes for Linux build. Improvements in documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,15 @@ project(${PROJECT_NAME} VERSION 3.2.0 LANGUAGES CXX CUDA)
 set(CMAKE_CXX_STANDARD          17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS        ON)
-set(CMAKE_CUDA_ARCHITECTURES    60 75 80)
+set(CMAKE_CUDA_ARCHITECTURES    80)
 
 find_package(OpenMP)
 
 option(CMAKE_BUILD_TYPE  "RELEASE")
-   
-include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+
+if(CMAKE_HOST_SYSTEM MATCHES "Windows")
+    include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+endif()
 
 # SUPER IMPORTANT FOR CUDA PROJECTS
 set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
