Added the path to the external boost library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,7 @@ target_include_directories(
     ${LIB_NAME} PUBLIC 
     ${LIBRARY_INCLUDES}
     "${CMAKE_BINARY_DIR}/configured_files/include"
+    "${LIOUVILLE_EQ_SOLVER_SOURCE_DIR}/../boost_1_84_0"
 )
 
 if(CMAKE_HOST_SYSTEM MATCHES Windows)
