--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ project(${PROJECT_NAME} VERSION 3.2.0 LANGUAGES CXX CUDA)
 set(CMAKE_CXX_STANDARD          17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS        ON)
-set(CMAKE_CUDA_ARCHITECTURES    80)
+set(CMAKE_CUDA_ARCHITECTURES    70 80)
 
 find_package(OpenMP)
 
