Full restructure. Input is now via a .json file in the Definition_examples folder. I believe that the last-frame not saving issue has been resolved. Python file has been created to build the set of experiments desired. NOT FINAL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,9 @@ set(CMAKE_HOST_SYSTEM Windows)
 set(PROJECT_NAME    LIOUVILLE_EQ_SOLVER)
 set(EXECUTABLE_NAME Simulation)
 set(LIB_NAME        Solver_Lib)
+set(MY_SOURCE_DIR  ${CMAKE_SOURCE_DIR})
 
-project(${PROJECT_NAME} VERSION 3.2.0 LANGUAGES CXX CUDA)
+project(${PROJECT_NAME} VERSION 4.0.0 LANGUAGES CXX CUDA)
 
 set(CMAKE_CXX_STANDARD          17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
