Started changes from most basic classes: the "particle" and "cartesianMesh" classes.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,29 +1,13 @@
 set(LIBRARY_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 set(LIBRARY_SOURCES
-    "${CMAKE_CURRENT_SOURCE_DIR}/Adapt_Mesh.cu"
-    "${CMAKE_CURRENT_SOURCE_DIR}/Domain.cu"
-    "${CMAKE_CURRENT_SOURCE_DIR}/Integrator.cu"
-    "${CMAKE_CURRENT_SOURCE_DIR}/Interpolation.cu"
-    "${CMAKE_CURRENT_SOURCE_DIR}/ivpSolver.cu"
-    "${CMAKE_CURRENT_SOURCE_DIR}/PointSearch.cu"
-    "${CMAKE_CURRENT_SOURCE_DIR}/Probability.cu"
-    "${CMAKE_CURRENT_SOURCE_DIR}/Simulation_parameters.cu"
-    "${CMAKE_CURRENT_SOURCE_DIR}/Sim_data.cu"
-    "${CMAKE_CURRENT_SOURCE_DIR}/Impulse_transformations.cu"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/Particle.cu"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/Domain.cu"
 )
 
 set(LIBRARY_HEADERS
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/Adapt_Mesh.cuh"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/Domain.cuh"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/Integrator.cuh"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/Interpolation.cuh"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/ivpSolver.cuh"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/PointSearch.cuh"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/Probability.cuh"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/Simulation_parameters.cuh"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/Sim_data.cuh"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/Impulse_transformations.cuh"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/Domain.cuh"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/Particle.cuh"
 )
 
 add_library(${LIB_NAME} STATIC ${LIBRARY_HEADERS} ${LIBRARY_SOURCES})
@@ -34,6 +18,7 @@ target_include_directories(
     "${CMAKE_BINARY_DIR}/configured_files/include"
     "${LIOUVILLE_EQ_SOLVER_SOURCE_DIR}/../boost"
     "${LIOUVILLE_EQ_SOLVER_SOURCE_DIR}/../boost_dir"
+    "${LIOUVILLE_EQ_SOLVER_SOURCE_DIR}/ext/boost"
 )
 
 if(CMAKE_HOST_SYSTEM MATCHES Windows)
