#2024.09.02: Still not compiling, but progress has been made. Added functionality in CMake and extensions changes for better modularity.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.22)
 
-# set(CMAKE_HOST_SYSTEM Windows)
-
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
   cmake_policy(SET CMP0141 NEW)
@@ -14,23 +12,26 @@ set(EXECUTABLE_NAME Simulation)
 set(LIB_NAME        Solver_Lib)
 set(MY_SOURCE_DIR  ${CMAKE_SOURCE_DIR})
 
-project(${PROJECT_NAME} VERSION 4.0.0 LANGUAGES CXX CUDA)
+project(${PROJECT_NAME} VERSION 4.0.0 LANGUAGES CXX)
+
+option(BUILD_CUDA "Build the CUDA version" ON)
+option(BUILD_SYCL "Build the SYCL version" OFF)
 
 set(CMAKE_CXX_STANDARD          17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS        ON)
-set(CMAKE_CUDA_ARCHITECTURES    60 70 80)
 
-find_package(OpenMP)
+if(BUILD_CUDA)
+    enable_language(CUDA)
+    add_compile_options(-D USECUDA) # this creates a preprocessor macro USECUDA. Just check if it is defined in the code
+    set(CMAKE_CUDA_ARCHITECTURES    60 70 80)
+    set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
+    message(STATUS "Building CUDA project")
+endif(BUILD_CUDA)
 
-if(CMAKE_HOST_SYSTEM MATCHES Windows)
-    include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
-endif()
+find_package(OpenMP REQUIRED)
 
 message(STATUS "Building in ${CMAKE_HOST_SYSTEM_NAME}")
-
-# NEEDED FOR CUDA PROJECTS
-set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
 
 add_subdirectory(configured)
 add_subdirectory(src)
